@startuml CloudFileSystem_Domain

abstract FileSystemItem {
  - parent: FileSystemItem | null
  - name: string
  + getTotalSize(): number
  + print(indent?: string, isLast?: boolean): string
  + toXml(indentLevel?: number): string
}

class Directory {
  - children: FileSystemItem[]
  + add(item: FileSystemItem): void
  + getTotalSize(): number
  + print(indent?: string, isLast?: boolean): string
  + toXml(indentLevel?: number): string
  + searchByExtension(ext: string): string[]
}

abstract class File {
  - sizeInBytes: number
  - createdAt: Date
  - extension?: string
  + getTotalSize(): number
  + print(indent?: string, isLast?: boolean): string
  + toXml(indentLevel?: number): string
  # formatSize(): string
  # getFullName(): string
  # getXmlTag(): string
}

class ImageFile {
  - width: number
  - height: number
  + print(...)
  + toXml(...)
}

class TextFile {
  - encoding: string
  + print(...)
  + toXml(...)
}

class WordFile {
  - pageCount: number
  + print(...)
  + toXml(...)
}

class GenericFile {
  - typeName: string
  + print(...)
  + toXml(...)
}

FileSystemItem <|-- Directory
FileSystemItem <|-- File
File <|-- ImageFile
File <|-- TextFile
File <|-- WordFile
File <|-- GenericFile
Directory "1" *-- "*" FileSystemItem : contains

@enduml
